Fix deprecation warnings for "new Integer/Boolean"